@@ -1,10 +1,21 @@
 import static org.gradle.api.JavaVersion.*
 
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath 'org.owasp:dependency-check-gradle:7.4.3'
+  }
+}
+
 plugins {
   id 'application'
   id 'org.openjfx.javafxplugin' version '0.0.13'
   id 'com.palantir.git-version' version '0.15.0'
 }
+
+apply plugin: 'org.owasp.dependencycheck'
 
 repositories {
   mavenCentral()
@@ -37,6 +48,7 @@ if (project.hasProperty( 'targetOs' )) {
 }
 
 def moduleSecurity = [
+    '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
     '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
     '--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED',
     '--add-opens=javafx.graphics/javafx.scene.text=ALL-UNNAMED',
@@ -53,7 +65,7 @@ def moduleSecurity = [
 
 javafx {
   version = '19'
-  modules = ['javafx.controls', 'javafx.swing']
+  modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.swing']
   configuration = 'compileOnly'
 }
 
@@ -71,6 +83,7 @@ dependencies {
   implementation 'org.fxmisc.wellbehaved:wellbehavedfx:0.3.3'
   implementation 'com.miglayout:miglayout-javafx:11.0'
   implementation 'com.dlsc.preferencesfx:preferencesfx-core:11.11.0'
+  implementation 'com.panemu:tiwulfx-dock:0.2'
 
   // Markdown
   implementation "com.vladsch.flexmark:flexmark:${v_flexmark}"
@@ -85,7 +98,6 @@ dependencies {
   implementation "com.fasterxml.jackson.core:jackson-databind:${v_jackson}"
   implementation "com.fasterxml.jackson.core:jackson-annotations:${v_jackson}"
   implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${v_jackson}"
-  implementation 'org.yaml:snakeyaml:1.33'
 
   // HTML parsing and rendering
   implementation 'org.jsoup:jsoup:1.15.3'
@@ -157,10 +169,11 @@ java {
 }
 
 compileJava {
-  options.compilerArgs
-      << '-Xlint:unchecked'
-      << '-Xlint:deprecation'
-      << "-Aproject=${applicationPackage}/${applicationName}"
+  options.compilerArgs += [
+      "-Xlint:unchecked",
+      "-Xlint:deprecation",
+      "-Aproject=${applicationPackage}/${applicationName}"
+  ]
 }
 
 application {
@@ -194,7 +207,8 @@ jar {
 
 distributions {
   main {
-    distributionBaseName = applicationName
+    distributionBaseName.set( applicationName )
+
     contents {
       from { ['LICENSE.md', 'README.md'] }
       into( 'images' ) {
